# discord-status

./: .dockerignore  .eslintrc.json  .gitignore  Cargo.toml  LEGAL.md  PRIVACY.yml  README.md  config.example.yml  docker-compose.yml  package.json  tsconfig.json  update_cmds.sh
.github/: FUNDING.yml
.github/workflows/: docker.yml
assets/psd/: statusblue.psd  statusgreen.psd  statusorange.psd  statusred.psd  statusyellow.psd
cmds/: about.json  config.json  help.json  help_text.json  invite.json  mod.json  setup.json  status.json  subscribe.json  support.json  unsubscribe.json
db/: schema.sql
db/migrations/: 20221220055555_create-tables.sql
scripts/: delete_all  update_cmds
services/bot/: .gitignore  .prettierrc.js  package.json  pnpm-lock.yaml  tsconfig.json
services/bot/prisma/: schema.prisma
services/commands/: Dockerfile  nodemon.json  package.json  pnpm-lock.yaml  tsconfig.json
services/commands/lib/: index.ts
services/commands/prisma/: schema.prisma
services/commands/scripts/: createCmds.ts  migrate.ts
services/update-poster/: .gitignore  Cargo.toml  Dockerfile  rustfmt.toml  sqlx-data.json
services/update-poster/src/: db.rs  embeds.rs  error.rs  main.rs  statuspage.rs  util.rs
src/: constants.rs  db.rs  embeds.rs  index.ts  main.rs  server.ts  statuspage.rs  util.rs
src/db/: models.ts
src/server/: auth.ts  handleCommands.ts  index.ts  oauth.ts
src/updates/: index.ts
src/util/: EmbedBuilder.ts  FixedLengthQueue.ts  Interaction.ts  Logger.ts  Queue.ts  Webhook.ts  config.ts  envcheck.ts  index.ts  logger.ts  purgeWebhooks.ts
(+24 files in other folders)
