[package]
name = "update-poster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "macros", "offline", "time"] }
thiserror = "1.0"
tokio = { version = "1.23", features = ["rt-multi-thread", "macros", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-http = "0.14"
twilight-model = "0.14"
